# bouracka-tests

./: .gitignore  BOURACKA-TESTPLAN-v0.4.2.xlsx  BOURACKA-TESTPLAN-v0.4.3.xlsx  BOURACKA-TESTPLAN-v0.4.4.xlsx  CHANGELOG.md  DELIVERY-NOTES.md  INSTALL.cmd  LICENSE  READ-ME-FIRST-CS.md  README-EN.md  README.md  RELEASE-NOTES-v0.1.5-INTEGRATION-2026-05-15-EN.md  RUN-TESTS.cmd  SESSION-CLOSE-CP-SUPIN-04-2026-05-06-EOD.md  SESSION-CLOSE-CP-SUPIN-05-2026-05-07-EOD.md  SESSION-CLOSE-CP-SUPIN-05-2026-05-08-IMPORT-FIX.md  SESSION-CLOSE-CP-SUPIN-05-2026-05-09-STATUS.md  SESSION-CLOSE-CP-SUPIN-07-2026-05-15-INTEGRATION.md  SYNCHRO-MACBOOK-CP-SUPIN-04-2026-05-06.md  SYNCHRO-MACBOOK-CP-SUPIN-04-2026-05-07-EOD.md  SYNCHRO-MACBOOK-CP-SUPIN-05-2026-05-07-EOD.md  SYNCHRO-MACBOOK-TO-OPUS-CP-SUPIN-06-2026-05-08.md  bouracka.py  package.json
_config/: AUDIT-MODE-DESIGN-v0.1-EN.md  BOURACKA-DATA-STORE-EVOLUTION-PLAN-v0.1-EN.md  BOURACKA-DWH-DEV-PLAN-v0.1-EN.md  BOURACKA-ORACLE-ERD-v0.1-EN.md  BOURACKA-P0-SMOKE-TC-RANKING-v0.1-EN.md  BOURACKA-UI-V0.1.5-DESIGN-NOTES-EN.md  MAJOR-DEV-SESSION-PLAN-v0.1.5-EN.md  MI-M-T-DATA-STORE-EVOLUTION-LESSONS-v0.1.md  OVERNIGHT-SONNET-DISPATCH-2026-05-15.md  RELEASE-NOTES-RULE-v0.1-EN.md  SONNET-BRIEF-001-WORKBOOK-PATCHER-V0.4.3-TO-V0.4.4.md  SONNET-BRIEF-001B-PATCHER-DATA-MIGRATION.md  SONNET-BRIEF-002-WORKBOOK-IO-AND-V015-ENDPOINTS.md  SONNET-BRIEF-003-TC-DISCOVERY-FROM-WORKBOOK.md  SONNET-BRIEF-004-HOTFIX-BUNDLE.md  SONNET-BRIEF-005-MOCK-DISPATCH-E2E.md  SONNET-BRIEF-006-INTEGRATION-PROBE-EXPANSION.md  SONNET-BRIEF-007-CROSS-CHECK-REPORT.md  SONNET-BRIEF-008-V015-RELEASE-ENGINEERING.md  SONNET-BRIEF-009-AUDIT-MODE.md  SONNET-OVERNIGHT-SUMMARY-2026-05-15.md  SONNET-RETURN-BRIEF-001B.md  SONNET-RETURN-BRIEF-02.md  SONNET-RETURN-BRIEF-04.md  SONNET-RETURN-BRIEF-06.md  SONNET-RETURN-BRIEF-07.md  TC-DISCOVERY-DESIGN-v0.1-EN.md  TES-GAP-ANALYSIS-2026-05-12-NIGHT-EN.md  TEST-ANALYSIS-AND-DESIGN-DEEP-SESSIONS-PLAN-v0.1-EN.md  WORKING-MODEL-SESSION-SPLIT-v0.1-EN.md
bouracka_ui/: README.md  pyproject.toml
bouracka_ui/bouracka_ui/: __init__.py  cli.py  cross_check.py  dispatcher.py  server.py  trace_bundle.py  workbook_io.py
bouracka_ui/bouracka_ui/static/: app.js  design-tokens.css  index.html  style.css
bouracka_ui/tests/: test_cross_check.py  test_mock_dispatch_e2e.py  test_smoke.py
(+310 files in other folders)
