[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bouracka-ui"
version = "0.1.5.dev5"
description = "Local presentation-layer UI for Bouračka test suite — pick env, select tests, run, view results, file bugs (JIRA-style). Forerunner of MI-M-T UI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary — internal SUPIN/Bouračka delivery" }
authors = [
    { name = "Petr Zemla", email = "petr.yamyang@gmail.com" },
]
keywords = ["bouracka", "supin", "mi-m-t", "test-presentation", "qa-ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openpyxl>=3.1",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",     # required for /api/bundles/import file upload
    "pytest>=8.0",                 # required at runtime: dispatcher invokes pytest+selenium subprocess
    "pytest-json-report>=1.5",     # required for selenium framework's --json-report flag (BUG-BUI-004)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",  # for FastAPI TestClient async transport
]

[project.scripts]
bouracka-ui = "bouracka_ui.cli:main"

[project.urls]
Homepage = "https://github.com/petr-yamyang/bouracka-tests"
Design = "file://_config/BOURACKA-UI-DESIGN-v0.1-2026-05-10.md"

[tool.pytest.ini_options]
markers = [
    "http_e2e: slow HTTP subprocess tests; skipped in default run",
    "integration: integration tests requiring real workbook / network",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["bouracka_ui*"]

[tool.setuptools.package-data]
"bouracka_ui" = ["static/*.html", "static/*.js", "static/*.css"]
